<resources>
    <string name="app_name">Neutrino</string>
    <string name="action_settings">Settings</string>
    <string name="bch_amount">%1$s BCH</string>
    <string name="balance_bch_amount">Balance: %1$s BCH</string>
    <string name="balance_fiat_amount">Balance: %1$s</string>
    <string name="unconfirmed">Unconfirmed</string>
    <string name="pending">Pending</string>
    <string name="confirmed">Confirmed</string>
    <string name="address_copied_to_clipboard">Address copied to clipboard.</string>
    <string name="insufficient_funds">Insufficient Funds</string>
    <string name="invalid_payment_request">Invalid Payment Request</string>
    <string name="barcode_read_error">Barcode Read Error</string>
    <string name="backup_your_wallet">Backup Your Wallet</string>
    <string name="backup_recovery_phrase_suggestion">Now that you\'ve received some money it\'s a good time to back up your wallet recovery phrase.</string>
    <string name="wallet_is_not_loaded_yet">Wallet isn\'t loaded yet.</string>
    <string name="source_text">Source Text</string>
    <string name="error_creating_transaction">Error creating transaction.</string>
    <string name="invalid_amount">INVALID AMOUNT</string>
    <string name="invalid_bitcoin_cash_address">INVALID BITCOIN CASH ADDRESS</string>
    <string name="network_fee_sat_per_byte">Network Fee: %1$d sat/byte</string>
    <string name="uri_copied_to_clipboard">URI copied to clipboard.</string>
    <string name="send_bch_to">Send %1$s BCH To:</string>
    <string name="send_bitcoin_cash">Send Bitcoin Cash</string>
    <string name="string_space"> </string>
    <string name="string_zero">0</string>
    <string name="string_0_bch">0 BCH</string>
    <string name="send_all">Send All</string>
    <string name="send">Send</string>
    <string name="pay_to">PAY TO</string>
    <string name="payment_address">PAYMENT ADDRESS</string>
    <string name="network_fee">NETWORK FEE</string>
    <string name="memo">MEMO</string>
    <string name="to_address">To Address</string>
    <string name="payment_sent">Payment Sent!</string>
    <string name="enter_new_pin">Enter New Pin</string>
    <string name="incorrect_pin">Incorrect Pin</string>
    <string name="restore_your_wallet">Restore your wallet</string>
    <string name="enter_your_phrase">Enter your 12-word recovery phrase to restore your wallet.</string>
    <string name="enter_word_1">Enter word 1</string>
    <string name="enter_word_2">Enter word 2</string>
    <string name="enter_word_3">Enter word 3</string>
    <string name="enter_word_4">Enter word 4</string>
    <string name="enter_word_5">Enter word 5</string>
    <string name="enter_word_6">Enter word 6</string>
    <string name="enter_word_7">Enter word 7</string>
    <string name="enter_word_8">Enter word 8</string>
    <string name="enter_word_9">Enter word 9</string>
    <string name="enter_word_10">Enter word 10</string>
    <string name="enter_word_11">Enter word 11</string>
    <string name="enter_word_12">Enter word 12</string>
    <string name="confirm">CONFIRM</string>
    <string name="your_name_optional">Your Name (optional)</string>
    <string name="memo_optional">Memo (optional)</string>
    <string name="request">Request</string>
    <string name="request_bitcoin_cash">Request Bitcoin Cash</string>
    <string name="settings">Settings</string>
    <string name="string_backing_up_your_wallet_1">Backing up your wallet is the only way to restore your funds if you ever lose access to your device.</string>
    <string name="string_backing_up_your_wallet_2">All you need is a paper and pen to jot down your recovery phrase. When you\'re ready, continue to the next step.</string>
    <string name="string_verify_your_recovery_phrase">Verify your recovery phrase</string>
    <string name="string_test_your_words">Let\'s test you to make sure you\'ve written it down correctly.</string>
    <string name="string_enter_the_words">Enter the following words from your recovery phrase.</string>
    <string name="string_download_orbot">Step 1: Download Orbot from the Play Store</string>
    <string name="string_open_orbot">Step 2: Open Orbot and check VPN Mode and select Full Device VPN</string>
    <string name="setup_tor">Setup Tor</string>
    <string name="string_setup_tor">Neutrino Wallet does an excellent job of preventing your peers from learning of your incoming payments. However, outgoing spends are still sent in the clear meaning your remote peers could potentially associate your spends with your IP address. This tutorial will show you how to set up Orbot to enhance the privacy of your spends.</string>
    <string name="string_check_neutrino">Step 3: Check Neutrino</string>
    <string name="string_orbot_configured">Orbot is now configured and will route Neutrino traffic (and only Neutrino traffic) through Tor when Orbot is running. You can optionally set Orbot to start on boot and run in the background.</string>
    <string name="partial_payment_detected">Partial Payment Detected</string>
    <string name="wallet_address">WALLET ADDRESS</string>
    <string name="bch_please">BCH Please</string>
    <string name="word">word</string>
    <string name="string_recovery_phrase_1">Keep your recovery phrase safe. If you ever lose or replace your phone, you can use it to recover your funds.</string>
    <string name="string_recovery_phrase_2">Never share your recovery phrase with anyone. To be safe, avoid screenshots and don\'t store it on your mobile device.</string>

    <!--Content Description-->
    <string name="arrow_image">arrow image</string>
</resources>