<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sendLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/sendToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/gradient"
        android:elevation="4dp"
        android:theme="@style/ToolBarStyle"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/toolbar_title"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/send_bitcoin_cash" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/sendBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text=""
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:background="?android:attr/listDivider" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/symbolLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="21dp"
                android:text=""
                android:textColor="@color/neonPurple"
                android:textSize="40sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/amountLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/string_space"
                android:minWidth="50dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/amountInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/string_zero"
                    android:inputType="numberDecimal"
                    android:textColor="@color/neonPurple"
                    android:textColorHint="@color/grey"
                    android:textSize="40sp" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/toggleImage"
            android:layout_width="30dp"
            android:layout_height="20dp"
            android:layout_gravity="end"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            app:srcCompat="@drawable/up_down_arrow" />

    </FrameLayout>

    <TextView
        android:id="@+id/conversionRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/string_0_bch" />

    <ToggleButton
        android:id="@+id/sendAllBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/toggle_button_selector"
        android:textColor="@color/grey"
        android:textOff="@string/send_all"
        android:textOn="@string/send_all" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addressLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="25dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addressInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/smallqr"
            android:hint="@string/to_address" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/memoInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/memo_optional" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/feeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/sendBtn"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_gravity="bottom"
            android:layout_margin="25dp"
            android:background="@color/neonBlue"
            android:text="@string/send"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>